[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walnut-ever-mem"
version = "0.1.0"
description = "A binary-logic based infinite context memory foundation for LLMs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "NightPoetry"}
]
keywords = ["llm", "memory", "context", "ai", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "numpy>=1.24",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "httpx>=0.26",
]

[project.scripts]
walnut-init = "walnut_ever_mem.cli_interactive:main_interactive"
walnut-server = "walnut_ever_mem.web_api:run_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
